--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,30 +1,50 @@
 <div class="container" >
-<div class="row">
-	<div class="col-xs-3">
-		<h2>User info</h2>
-		<%= render 'users/profile', user: @user %>
+	<div class="row">
+		<div class="col-xs-3">
+			<h2>User info</h2>
+			<%= render 'users/profile', user: @user %>
 
-		<h2>New book</h2>
-		<%= render 'books/newform', book: @books %>
-	</div>
+			<h2>New book</h2>
+			<%= render 'books/newform', book: @books %>
+		</div>
+	
 	<div class="col-xs-9">
 		<h2>Book detail</h2>
 		<table class="table">
-				<tr>
-					<td>
-						<%= link_to (@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-						<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, book_path(@book) %></td>
-					<td><%= @book.body %></td>
-					<% if @book.user.id == current_user.id %>
-					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-					<td><%= link_to "Destroy",@book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+			<tr>
+				<td>
+					<%= link_to (@book.user) do %>
+					<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
+					<%= @book.user.name %>
 					<% end %>
-				</tr>
-			</table>
+				</td>
+				<td><%= link_to @book.title, book_path(@book) %></td>
+				<td><%= @book.body %></td>
+				<td>
+					<% if @book.favorited_by?(current_user) %>
+					<li>
+						<%= link_to book_favorites_path(@book), method: :delete do %>
+						<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+						<%= @book.favorites.count %> いいね
+						<% end %>
+					</li>
+					<% else %>
+					<li>
+						<%= link_to book_favorites_path(@book), method: :post do %>
+						<i class="fa fa-heart-o" aria-hidden="true"></i>
+						<%= @book.favorites.count %> いいね<br>
+						<% end %>
+						<%= @book.book_comments.count %>コメント
+					</li>
+					<% end %>
+				</td>
+				<% if @book.user.id == current_user.id %>
+				<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+				<td><%= link_to "Destroy", book_path(@book), method: :delete %></td>
+				<% end %>
+			</tr>
+		</table>
+			<%= render 'books/comment', book: @book, book_comment: @book_comment %>
 	</div>
 </div>
 </div>
