--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,6 +26,13 @@
 						<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 						<td><%= user.name%></td>
 						<td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
+					    <td><%= link_to "フォロー数: #{user.follower.count}", follower_user_path(user) %></td>
+			            <td><%= link_to "フォロワー数: #{user.followed.count}", followed_user_path(user) %></td>
+						<% if current_user.following?(user) %>
+						<td><%= link_to 'フォローをやめる', unfollow_path(user.id), method: :POST %></td>
+						<% else %>
+						<td><%= link_to 'フォローする', follow_path(user.id), method: :POST %></td>
+						<% end %>
 					</tr>
 					<% end %>
 				</tbody>
